--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,48 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="bootstrap.css">
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-          rel="stylesheet">
+    <link rel="stylesheet" href="bootstrap.css" />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <style>
+      .drag-n-drop-placeholder {
+          border: 2px dashed black; 
+      }
+      section[visual-editor]:hover {
+          border: 2px dashed black; 
+          cursor: grab;
+      }
+      section[visual-editor] {
+          border: 2px solid transparent; 
+      }
+      body { 
+          animation: fadeInAnimation ease-in 150ms; 
+          animation-iteration-count: 1; 
+          animation-fill-mode: forwards; 
+      }
+      .sortable {
+        width: 100%;
+        text-align: inherit;
+      }
+      @keyframes fadeInAnimation { 
+          0% { 
+              opacity: 0; 
+          } 
+          100% { 
+              opacity: 1; 
+          } 
+      } 
+  </style>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
